# py-worker-factory

./: .dockerignore  .envsample  .gitignore  Dockerfile  Dockerfile-worker  README.md  docker-compose.yml  pyproject.toml
agent_code_shared/skills/: auto_planning.md  data_wizard.md  diagram_builder.md  document_generator.md  web_research.md
app/: main.py
app/celery_tasks/: cleanup_screenshots.py  tasks_cleanup.py  worker_tasks.py
app/core/: celery_app.py  config.py  s3.py  utils.py
app/db/: session.py
app/models/: __init__.py  user.py  worker.py
app/routers/: tasks.py  user.py  workers.py
app/schemas/: user.py  worker.py
app/user/: dependencies.py  security.py  validators.py
app/worker/: crud.py  docker_service.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/layout/: DashboardLayout.tsx  LogPanel.tsx  PageLayout.tsx  Sidebar.tsx  TaskInputPanel.tsx  TopBar.tsx
frontend/src/components/workers/: LiveViewBezel.tsx  WorkerCard.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/data/: mockData.ts
frontend/src/lib/: api.ts  skills.ts
frontend/src/pages/: LoginPage.tsx  ProfilePage.tsx  RegisterPage.tsx  ScreenshotGalleryPage.tsx  TaskHistoryPage.tsx  WorkerDetailPage.tsx
frontend/src/types/: index.ts
migrations/: env.py
migrations/versions/: 09d6e3936dbb_deleted_image_types.py  4798c26f69b4_added_new_field_to_taskmodel.py  49b9d15ddf6c_deleted_image_task_relation.py  58732e8c17bc_added_user_workers_relations_task_image_.py  da70a6df8a83_add_worker_created_at.py  eede75c44748_added_relationship_user_worker.py  f2763ad2110f_add_worker_id_to_image_model.py  f5901b4036d7_initial_migration.py
