[project]
name = "worker-factory"
version = "0.1.0"
description = "AI Worker Factory with FastAPI"
authors = [
    {name = "Stark"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "fastapi (>=0.129.0,<0.130.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "docker (>=7.1.0,<8.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "poetry-core (>=2.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "aiogram (>=3.25.0,<4.0.0)",
    "celery (>=5.6.2,<6.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "redis (>=7.1.1,<8.0.0)",
    "aioboto3 (>=15.5.0,<16.0.0)",
    "python-multipart (>=0.0.22)",
    "bcrypt (==4.0.1)",
    "aiosmtplib (>=5.1.0,<6.0.0)",
    "greenlet (>=3.3.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.1.0,<27.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
